# srun-auto-dial

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  srun.toml.example
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs  service.rs
src/api/: auth.rs  handlers.rs  mod.rs  models.rs  server.rs
src/net/: dhcp.rs  mod.rs  netlink.rs
src/srun/: base64.rs  mod.rs  utils.rs  xencode.rs
src/tui/: mod.rs
web/: .dockerignore  Dockerfile  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/app/random/: page.tsx
web/src/components/: interface-select.tsx  navbar.tsx  result-table.tsx  status-card.tsx
web/src/lib/: api.ts
