[package]
name = "srun-auto-dial"
version = "0.2.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP
reqwest = { version = "0.13", default-features = false, features = ["json", "query"] }

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Network
rtnetlink = "0.20"
netlink-packet-route = "0.28"
dhcproto = "0.14"
pnet = "0.35"

# CLI
clap = { version = "4", features = ["derive"] }
inquire = "0.9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Crypto
hmac = "0.12"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
rand = "0.9"
